# generic-unification

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  TAGS  generic-unification.cabal  package.yaml  stack.yaml
examples/: simple.hs
src/Data/Unification/: Generic.hs  Variable.hs
